--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.2"
+  },
+  "scripts": {
+    "twbuild": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   }
 }
